--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ crash.*.log
 # password, private keys, and other secrets. These should not be part of version 
 # control as they are data points which are potentially sensitive and subject 
 # to change depending on the environment.
-*.tfvars
-*.tfvars.json
+#*.tfvars
+#*.tfvars.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
@@ -23,6 +23,7 @@ override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+*.terraform*
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
