--- a/app/frontend.yaml
+++ b/app/frontend.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
       - name: ghack-app
-        #image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest
-        image: nginx
+        image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest
+        #image: nginx
         ports:
         - containerPort: 80
 
