--- a/app/pod copy.yaml
+++ b/app/pod copy.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db-service
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: nanann
 spec:
   selector:
     app: db
@@ -17,7 +17,7 @@ metadata:
   labels:
     app: db
   name: gubgub
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: nanann
 spec:
   restartPolicy: Always
   containers:
@@ -37,12 +37,12 @@ metadata:
   labels:
     app: app
   name: gubgubapp
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: nanann
 spec:
   restartPolicy: Always
   containers:
   - name: app
-    image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest
+    image: myimage
     ports:
     - containerPort: 5000
 ---
@@ -50,7 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-service
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: nanann
 spec:
   type: LoadBalancer
   ports:
@@ -58,5 +58,3 @@ spec:
       targetPort: 5000
   selector:
     app: app
-
-#kubectl create deployment my-deployment --image=europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest --port=5000 --namespace=cloudbuild-scheduler-gcp-coe-msp-sandbox --dry-run=client -o yaml --save-config > deployment.yaml
