--- a/app/pod.yaml
+++ b/app/pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: db-service
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  name: db-svc
+  namespace: tagger-gcp-coe-msp-sandbox
 spec:
   selector:
     app: db
@@ -17,7 +17,7 @@ metadata:
   labels:
     app: db
   name: gubgub
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: tagger-gcp-coe-msp-sandbox
 spec:
   restartPolicy: Always
   containers:
@@ -37,7 +37,7 @@ metadata:
   labels:
     app: app
   name: gubgubapp
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: tagger-gcp-coe-msp-sandbox
 spec:
   restartPolicy: Always
   containers:
@@ -50,7 +50,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-service
-  namespace: cloudbuild-scheduler-gcp-coe-msp-sandbox
+  namespace: tagger-gcp-coe-msp-sandbox
 spec:
   type: LoadBalancer
   ports:
@@ -59,4 +59,4 @@ spec:
   selector:
     app: app
 
-#kubectl create deployment my-deployment --image=europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest --port=5000 --namespace=cloudbuild-scheduler-gcp-coe-msp-sandbox --dry-run=client -o yaml --save-config > deployment.yaml
+#kubectl create deployment my-deployment --image=europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest --port=5000 --namespace=tagger-gcp-coe-msp-sandbox --dry-run=client -o yaml --save-config > deployment.yaml
