--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -191,8 +191,8 @@ steps:
 
         gcloud secrets add-iam-policy-binding "$team_namespace" --member="serviceAccount:$service_account_name" --role="roles/secretmanager.secretAccessor" --project="$_OPS_PROJECT_ID"
 
-  # build image
-  - id: "build image"
+  # deployemtn services manifest
+  - id: "GKE - Deploy application "
     name: "gcr.io/cloud-builders/gcloud"
     entrypoint: "bash"
     args:
@@ -200,4 +200,85 @@ steps:
       - -c
       - |
         #!/bin/bash
-        echo "future"
+        service_account_name=$(cat /workspace/teamsa.txt)
+        
+        # Extract teamname and teamprojected
+        teamname=$(echo "$service_account_name" | awk -F'[@.]' '{print $1}')
+        teamprojectid=$(echo "$service_account_name" | awk -F'[@.]' '{print $2}')
+        
+        # Merge teamname and teamprojectid
+        team_namespace="${teamname}-${teamprojectid}"
+        team_namespace="xxxx"
+        pass_gen="bwewe"
+        #actual role creation
+        cat <<EOF | kubectl apply -f -
+        apiVersion: v1
+        kind: Service
+        metadata:
+          name: db-svc
+          namespace: $team_namespace
+        spec:
+          selector:
+            app: db
+          ports:
+            - protocol: TCP
+              port: 3306
+              targetPort: 3306
+        ---
+        apiVersion: v1
+        kind: Pod
+        metadata:
+          labels:
+            app: db
+          name: gubgub-db
+          namespace: $team_namespace
+        spec:
+          restartPolicy: Always
+          containers:
+          - name: db
+            image: mysql:latest
+            ports:
+            - containerPort: 3306
+            env:
+            - name: MYSQL_DATABASE
+              value: game_db
+            - name: MYSQL_ROOT_PASSWORD
+              value: $pass_gen
+        ---
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: gubgub-frontend
+          namespace: $team_namespace
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app: app
+          template:
+            metadata:
+              labels:
+                app: app
+            spec:
+              containers:
+              - name: app
+                image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:latest
+                ports:
+                - containerPort: 5000
+                env:
+                - name: MYSQL_ROOT_PASSWORD
+                  value: password
+        ---
+        apiVersion: v1
+        kind: Service
+        metadata:
+          name: app-service
+          namespace: $team_namespace
+        spec:
+          type: LoadBalancer
+          ports:
+            - port: 80
+              targetPort: 5000
+          selector:
+            app: app
+        EOF
