--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5550:5000"
     environment:
-      MYSQL_PASSWORD: password
+      MYSQL_PASSWORD: 111b0db2129e7527cece3429333ac026
     depends_on:
       - db
     networks:
@@ -17,7 +17,7 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: game_db
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: 111b0db2129e7527cece3429333ac026
     ports:
       - "3306:3306"
     networks:
