--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -212,14 +212,16 @@ steps:
   #       docker buildx build --push --platform linux/amd64 --tag europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/$team_namespace:latest app_db
   
   #Build db image and push to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    script: |
-      gcloud auth configure-docker europe-west1-docker.pkg.dev
-      docker buildx build --push --platform linux/amd64 --tag europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/$team_namespace:latest app_db
-    automapSubstitutions: true
-    images:
-    - 'europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/$team_namespace:latest'
-  # deploy services manifest
+  - id: "Build db"
+    name: 'gcr.io/cloud-builders/docker'
+    script: 
+      - '-c'
+      - |
+        #!/bin/bash
+        gcloud auth configure-docker europe-west1-docker.pkg.dev
+        docker buildx build --push --platform linux/amd64 --tag europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/$team_namespace:latest app_db
+    # automapSubstitutions: true
+    # deploy services manifest
   - id: "GKE - Deploy db-svc "
     name: "gcr.io/cloud-builders/gcloud"
     entrypoint: "bash"
