--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -227,9 +227,11 @@ steps:
       - '-c'
       - |
         # Build the Docker image
-        docker buildx build --push --platform linux/amd64 --tag europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/$team_namespace:latest app_db
-
-    # deploy services manifest
+        docker buildx build --platform linux/amd64 -t gubgub:0.1 app_db
+        docker tag gubgub:0.1 europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:0.1
+        docker push europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgub:0.1
+  
+  # deploy services manifest
   - id: "GKE - Deploy db-svc "
     name: "gcr.io/cloud-builders/gcloud"
     entrypoint: "bash"
