--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -207,7 +207,7 @@ steps:
         # Extract teamname and teamprojected
         teamname=$(echo "$service_account_name" | awk -F'[@.]' '{print $1}')
         
-        sed -i '' -e "s/ENV MYSQL_ROOT_PASSWORD=<password>/ENV MYSQL_ROOT_PASSWORD=${pass_gen}/g" app_db/Dockerfile
+        sed -i '' -e "s/ENV MYSQL_ROOT_PASSWORD=tmppassword/ENV MYSQL_ROOT_PASSWORD=${pass_gen}/g" app_db/Dockerfile
 
         docker buildx build --platform linux/amd64 -t gubgubdb:$teamname app_db
         docker tag gubgubdb:$teamname europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$teamname
